# ClusterJudge

./: .dockerignore  .gitignore  Dockerfile  README.md  main.ipynb  original_prompt.txt  prompt_init.txt  prompt_main.txt  pyproject.toml
.github/workflows/: docker.yml
forestconflict/: c3_shared.py
