[project]
name = "clusterjudge"
version = "0.1.0"
description = "Compare clusterings from noisy pairwise judgements"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "torch>=2.0,<3",
    "numpy>=1.24",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "networkx>=3.0",
    "scipy>=1.10",
    "jupyterlab>=4.0",
    "ipykernel>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
